syntax = "proto3";

package example;

option go_package = "go-compiler/generated/requestpb";

service RequestService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc SubmitRequest(SubmissionRequest) returns (SubmissionResponse);
}

message PingRequest {}

message PingResponse {
  string message = 1;
}

message SubmissionRequest {
  string code = 1;
  int64 language_id = 2;
  string stdin = 3;
  string expected_output = 4;
  string request_id = 5;
}

message SubmissionResponse {
  string result = 1;
}
